@@ -1,3 +1,8 @@
+Fri Jul  1 16:01:02 1994  Mark Eichin  (eichin@cygnus.com)
+
+	* adm_listen.c: if USE_SIGPROCMASK, replace sigblock et al.
+	configure.in: CHECK_SIGPROCMASK.
+
 Wed Jun 29 00:25:29 1994  Tom Yu  (tlyu at dragons-lair)
 
 	* adm_server.c: fixed error table calls to use krb5_init_ets
